<resources>
    <string name="app_name">ChemDroid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="p1"> <b> Question No.1 \n As we drive an automobile, we don\'t think about the chemicals consumed and produced. Prepare a list of the principal chemicals consumed and produced during the operation of an automobile. </b> </string>
    <string name="p_1"> <b> Gasoline (a mixture of compounds), oxygen,  \n and to a lesser extent, nitrogen are \n consumed. Carbon dioxide and water are the  \n principal products. Carbon monoxide and \n nitrogen oxides are produced in lesser amounts. </b> </string>
    <string name="p2"><b> Question No.2 \n Classify each of the following as an element, a compound, or a mixture: </b></string>
    <string name="p_2"><b> a) element; (b) element; (c) compound; (d) mixture, (e) compound; (f) compound; (g) compound; (h) mixture </b></string>
    <string name="p3"><b> Question No.3 \n How are the molecules in oxygen gas, the molecules in hydrogen gas, and water molecules similar? How do they differ? </b></string>
    <string name="p_3"><b> In each case, a molecule consists of two or more combined atoms. They differ in that the types of atoms change from one substance to the next. </b></string>
    <string name="p4"> <b> Question No.4 \n How do molecules of elements and molecules of compounds differ? In what ways are they similar?</b></string>
    <string name="p_4"><b> Molecules of elements contain only one type of atom; molecules of compounds contain two or more types of atoms. They are similar in that both are comprised of two or more atoms chemically bonded together.</b></string>
    <string name="p5"> <b> Question No.5 \n   How does a homogeneous mixture differ from a pure substance? How are they similar? </b> </string>
    <string name="p_5"> <b> The mixture can have a variety of compositions; a pure substance has a definite composition. Both have the same composition from point to point. </b> </string>
    <string name="p6"><b> Question No.6 \n Many of the items you purchase are mixtures of pure compounds. Select three of these commercial products and prepare a list of the ingredients that are pure compounds. </b></string>
    <string name="p_6"><b> Answers will vary. Sample answer: Gatorade contains water, sugar, dextrose, citric acid, salt, sodium chloride, monopotassium phosphate, and sucrose acetate isobutyrate. </b></string>
    <string name="p7"><b> Question No.7 \n What properties distinguish solids from liquids? Liquids from gases? Solids from gases? </b></string>
    <string name="p_7"><b> Liquids can change their shape (flow); solids can’t. Gases can undergo large volume changes as pressure changes; liquids do not. Gases flow and change volume; solids do not. </b></string>
    <string name="p8"> <b> Question No.8 \n When elemental iron corrodes it combines with oxygen in the air to ultimately form red brown iron(III) oxide which we call rust. (a) If a shiny iron nail with an initial mass of 23.2 g is weighed after being coated in a layer of rust, would you expect the mass to have increased, decreased, or remained the same? Explain.
        (b) If the mass of the iron nail increases to 24.1 g, what mass of oxygen combined with the iron?</b></string>
    <string name="p_8"><b>(a) Increased as it would have combined with oxygen in the air thus increasing the amount of matter and therefore the mass. (b) 0.9 g</b></string>
    <string name="p9"><b> Question No.9 \n Yeast converts glucose to ethanol and carbon dioxide during anaerobic fermentation as depicted in the simple chemical equation here:
       glucose⟶ethanol+carbon dioxide </b></string>
    <string name="p_9"><b> a) 200.0 g; (b) The mass of the container and contents would decrease as carbon dioxide is a gaseous product and would leave the container. (c) 102.3 g</b></string>
    <string name="t1"> <b> Question No.1 \n   A chemist’s 50-Trillion Angstrom Run (see Figure) would be an archeologist’s 10,900 cubit run. How long is one cubit in meters and in feet? (1 Å = 1 × 10−8 cm)</b> </string>
    <string name="t_1"> <b> 0.46m; 1.5 ft/cubit  </b> </string>
    <string name="t2"> <b> Question No.2 \n   A chemistry student is 159 cm tall and weighs 45.8 kg. What is her height in inches and weight in pounds?</b> </string>
    <string name="t_2"> <b> 62.6 in and 101 lb </b> </string>
    <string name="t3"> <b> Question No.3 \n  A long ton is defined as exactly 2240 lb. What is this mass in kilograms? </b> </string>
    <string name="t_3"> <b> 1.0160 X 10^3 kg </b> </string>
    <string name="t4"> <b> Question No.4 \n   As an instructor is preparing for an experiment, he requires 225 g phosphoric acid. The only container readily available is a 150-mL Erlenmeyer flask. Is it large enough to contain the acid, whose density is 1.83 g/mL?C </b> </string>
    <string name="t_4"> <b> Yes, the acid\'s volume is 123 mL  </b> </string>
    <string name="t5"> <b> Question No.5 \n   Calculate the density of aluminum if 27.6 cm3 has a mass of 74.6 g.</b> </string>
    <string name="t_5"> <b> 2.70 g/cm^3  </b> </string>
    <string name="t6"> <b> Question No. 6\n  Calculate these masses</b> </string>
    <string name="t_6"> <b> (a) 81.6g /n (b) 17.6g</b> </string>
    <string name="t7"> <b> Question No.7 \n   Calculate these volumes</b> </string>
    <string name="t_7"> <b> (a) 5.1mL \n (b) 37L  </b> </string>
    <string name="t8"> <b> Question No.8 \n  Convert the boiling temperature of gold, 2966 °C, into degrees Fahrenheit and kelvin.</b> </string>
    <string name="t_8"> <b> 5371 °F, 3239 K </b> </string>
    <string name="t_9"> <b> -33.4°C, 239.8 K </b> </string>
    <string name="t10"> <b> Question No.10 \n   Is a 197-lb weight lifter light enough to compete in a class limited to those weighing 90 kg or less? </b> </string>
    <string name="t_10"> <b> yes, weight = 89.4kg  </b> </string>
</resources>